chore: code clean up

--- a/src/jupyter_notebooks/PDFAdjustContrastAndTemperature.ipynb
+++ b/src/jupyter_notebooks/PDFAdjustContrastAndTemperature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,12 +76,12 @@
     "    pdf.output(output_pdf_path)\n",
     "\n",
     "\n",
-    "pdf_path = \"../merger/output/Beethoven_op_58.pdf\"\n",
+    "pdf_path = \"input/4.pdf\"\n",
     "contrast_factor = 2.0  # Adjust this value to control contrast (1.0 is default)\n",
     "sharpness_factor = 2.0  # Adjust this value to control sharpness (1.0 is default)\n",
     "adjusted_images = process_pdf_with_adjusted_contrast(pdf_path, contrast_factor)\n",
     "\n",
-    "output_pdf_path = \"adjusted_output.pdf\"\n",
+    "output_pdf_path = \"output/adjusted_output.pdf\"\n",
     "create_pdf_from_images(adjusted_images, output_pdf_path)"
    ]
   }
